package Management;

public interface CompilerStrategy {
    void compile();
}
