package Management;

public class TeslaMonitoringStrategy implements MonitoringStrategy {
    @Override
    public void monitor() {
        System.out.println("Monitoring with Tesla monitoring strategy.");
    }
}
