@startuml

title __NVIDIATOOLKIT's Class Diagram__\n

  namespace CardFamily {
    class CardFamily.FermiFamily {
    }
  }
  

  namespace CardFamily {
    abstract class CardFamily.GraphicsCardFamily {
    }
  }
  

  namespace CardFamily {
    class CardFamily.PascalFamily {
    }
  }
  

  namespace CardFamily {
    class CardFamily.TeslaFamily {
    }
  }
  

  namespace Management {
    interface Management.CompilerStrategy {
    }
  }
  

  namespace Management {
    class Management.FermiCompilerStrategy {
    }
  }
  

  namespace Management {
    class Management.FermiMonitoringStrategy {
    }
  }
  

  namespace Management {
    class Management.FermiProfilerStrategy {
    }
  }
  

  namespace Management {
    interface Management.MonitoringStrategy {
    }
  }
  

  namespace Management {
    class Management.NvidiaToolkit {
    }
  }
  

  namespace Management {
    class Management.PascalCompilerStrategy {
    }
  }
  

  namespace Management {
    class Management.PascalMonitoringStrategy {
    }
  }
  

  namespace Management {
    class Management.PascalProfilerStrategy {
    }
  }
  

  namespace Management {
    interface Management.ProfilerStrategy {
    }
  }
  

  namespace Management {
    class Management.TeslaCompilerStrategy {
    }
  }
  

  namespace Management {
    class Management.TeslaMonitoringStrategy {
    }
  }
  

  namespace Management {
    class Management.TeslaProfilerStrategy {
    }
  }
  

  namespace ToolkitFactory {
    class ToolkitFactory.ToolkitFactory {
    }
  }
  

  namespace main {
    class main.ToolkitClient {
    }
  }
  

  CardFamily.FermiFamily -up-|> CardFamily.GraphicsCardFamily
  CardFamily.PascalFamily -up-|> CardFamily.GraphicsCardFamily
  CardFamily.TeslaFamily -up-|> CardFamily.GraphicsCardFamily
  Management.FermiCompilerStrategy .up.|> Management.CompilerStrategy
  Management.FermiMonitoringStrategy .up.|> Management.MonitoringStrategy
  Management.FermiProfilerStrategy .up.|> Management.ProfilerStrategy
  Management.NvidiaToolkit o-- Management.CompilerStrategy : compiler
  Management.NvidiaToolkit o-- Management.MonitoringStrategy : monitoringTool
  Management.NvidiaToolkit o-- Management.ProfilerStrategy : profiler
  Management.PascalCompilerStrategy .up.|> Management.CompilerStrategy
  Management.PascalMonitoringStrategy .up.|> Management.MonitoringStrategy
  Management.PascalProfilerStrategy .up.|> Management.ProfilerStrategy
  Management.TeslaCompilerStrategy .up.|> Management.CompilerStrategy
  Management.TeslaMonitoringStrategy .up.|> Management.MonitoringStrategy
  Management.TeslaProfilerStrategy .up.|> Management.ProfilerStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
